# cxx_crud_file

./: BinFile.hpp  BmpFile.hpp  CMakeLists.txt  DatFile.hpp  FileTools.h  FileTools.hpp  ImgFile.hpp  IniFile.hpp  JsonFile.hpp  README.md  Tools.hpp  TxtFile.hpp  UFile.hpp  UString.hpp  Variant.hpp  crud_test.cpp  main.cpp  pch.h
bmp/: BMP.h
files_test/: ini_test_01.ini  ini_test_02.ini  test_01.txt
ini/: ConvertUTF.h  SimpleIni.h
json/: json-forwards.h  json.h  jsoncpp.cpp
src/: IniFile.hpp  JsonFile.hpp  UString.hpp  Variant.hpp
test_files/: test_01.txt
